--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^105.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
     "node-fetch": "^3.3.1",
