--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "googleapis": "^105.0.0",
+    "googleapis": "^123.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
     "socket.io": "^4.7.1"
   }
